Paulin korjausten aloitus

--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -101,12 +101,12 @@ Abstract goes here.
 
 \section{Black hole properties}
 
-A black hole (BH) is defined as a region of spacetime for which the gravitational field is so strong that no objects or signals that carry information can escape from it. Black holes have the interesting property that their gravitational field is completely determined by the black hole's mass M, its angular momentum J, and its electric charge Q. This is known as the black hole uniqueness theorem or no-hair theorem, which states that all physical black hole solutions are completely characterized by the above-mentioned three parameters, and must satisfy the condition 
+A black hole (BH) is defined as a region of spacetime in which the gravitational field is so strong that no objects or signals that carry information can escape from it. Black holes have the interesting property that they are completely determined by the their mass M, angular momentum J, and electric charge Q. This is known as the black hole uniqueness theorem or no-hair theorem, which states that all physical black hole solutions are completely characterized by the above-mentioned three parameters, and must satisfy the condition 
 \begin{equation} \label{equ:bhunique}
 M^2 - \left( \frac{J}{M} \right)^2 - Q^2 \geq 0 \ ,
 \end{equation}
 where we set $G = c = 1$ \citep{mazur:2001}.
-Thus only by changing these variables can the properties of the black hole change. The physical reasoning for this uniqueness theorem is that the matter beyond the event horizon of a black hole cannot directly affect anything outside of it. Thus only the globally conserved characteristics, such as mass and angular momentum, survive and can be measured from the outside. The electric charge of black holes that appear in nature is most likely neutral, since having a non-neutral charge would require a very large imbalance in the amounts of protons and electrons that enter into the black hole, which is not a realistic scenario with normal matter.
+Thus only by changing these variables can the properties of the black hole change. The physical reasoning for this uniqueness theorem is that the matter beyond the event horizon of a black hole cannot directly affect anything outside of it. Thus only the globally conserved characteristics, such as mass and angular momentum, survive and can be measured from the outside. The electric charge of black holes that appear in nature is most likely very near zero, since having a non-zero charge would require a very large imbalance in the amounts of protons and electrons that enter into the black hole, which is not a realistic scenario with normal matter.
 
 Black holes can be divided into four distinct types based on these properties. Every black hole has mass, but the angular momentum and electric charge are not necessary.
 \begin{table}[htb]
@@ -124,9 +124,9 @@ The simplest type of black hole is created when an object of mass M becomes smal
 \begin{equation}
 r_S = \frac{2GM}{c^2} \ .
 \end{equation}
-A black hole can be born in nature when massive a star dies and explodes in a supernova. As will be discussed in more detail in section \ref{sect:stellarholes}, massive stars can fuse matter up to iron, and an iron core is formed at the center of the star near the end of its lifetime. Once this core grows massive enough that the degeneracy pressure of electrons can no longer support its gravity, it will undergo catastrophic collapse. If the massive core collapses until it reaches the aforementioned radius, it will form a black hole. The radius is called the Schwarzschild radius, so named after the German astronomer Karl Schwarzschild, who found an exact solution for the Einstein field equations \citep{schwarzschild:1916}. Einstein field equations are the set of 10 equations in Albert Einstein's general theory of relativity that describe the fundamental interaction of gravitation as a result of spacetime being curved by mass and energy \citep{einstein:1915}. The surface at this radius is called the event horizon. Event horizons are mathematical surfaces, and they do not form any sort of physical barrier. An observer can fall inside the event horizon without any problem. The event horizon simply marks the limit at which not even light can escape the gravitational pull of the black hole.
+A black hole can be born in nature when massive a star dies and explodes in a supernova. As will be discussed in more detail in section \ref{sect:stellarholes}, massive stars can fuse matter up to iron, and an iron core is formed in the center of the star near the end of its lifetime. Once this core grows massive enough that the degeneracy pressure of electrons can no longer support its gravity, it will undergo catastrophic collapse. If the massive core collapses until it reaches the aforementioned radius, it will form a black hole. The radius is called the Schwarzschild radius, so named after the German astronomer Karl Schwarzschild, who found an exact solution for the Einstein field equations \citep{schwarzschild:1916}. Einstein field equations are the set of 10 equations in Albert Einstein's general theory of relativity that describe the fundamental interaction between spacetime curvature and mass and energy \citep{einstein:1915}. The surface at this radius is called the event horizon. Event horizons are mathematical surfaces, and they do not form any sort of physical barrier. An observer can fall inside the event horizon without any problem. The event horizon simply marks the limit at which not even light can escape the gravitational pull of the black hole.
 
-There exists solutions that do not satisfy the condition given by equation \ref{equ:bhunique}, but these solutions are not stationary. In a stationary field the geometry does not change over time, but it can rotate, e.g. the Kerr solution. As will discussed soon, these non-stationary solutions are not really physical. This gives an upper limit to the angular momentum that a physical uncharged black hole can have. This limit can be expressed as the specific angular momentum 
+Solutions that do not satisfy the condition given by equation \ref{equ:bhunique} do exist, but these solutions are not stationary, i.e.\ they evolve with time to a Kerr solution. In a stationary field the geometry does not change over time, but it can rotate, e.g. the Kerr solution. As will be discussed soon, these non-stationary solutions are not really physical. This gives an upper limit to the angular momentum that a physical uncharged black hole can have. This limit can be expressed as the specific angular momentum 
 \begin{equation} \label{equ:angularmomentum}
 a = \frac{J}{Mc}
 \end{equation}
@@ -136,17 +136,19 @@ a_* = \frac{Jc}{GM^2} \ .
 \end{equation}
 The parameter can range from 0, meaning that the hole does not spin, to almost 1, meaning that it spins as fast as possible for a given mass \citep{middleton:2016}.
 
-If a black hole would have even larger angular momentum than allowed by these constraints, i.e. $a > 1$, it would mean that it actually would not be a black hole at all, since the event horizon would disappear due to the extreme rotation. 
+If a black hole would have a larger angular momentum than allowed by these constraints, i.e. $a > 1$, it would mean that it actually would not be a black hole at all, since the event horizon would disappear due to the extreme rotation. 
 %This is made clear by looking at equation \ref{equ:evenhorizons}, which describes the surfaces that event horizons occur at. If $\mu^2 < a^2$, the solutions for this equation are complex, which is said to mean that the actual event horizons disappear.
 This would cause what is known as a naked singularity, meaning that a singularity that is normally contained within a black hole would be visible to an outside observer. The possible existence of such singularities in nature is uncertain but extremely unlikely. If they were to exist, they might cause fundamental problems for physics as we know it. We would be able to see matter condensed to infinite density, and we have no theories that can predict how spacetime works near such abnormalities. Normally this is not a problem, since they cannot be observed inside event horizons. However the cosmic censorship hypothesis suggests that naked singularities cannot be formed in nature from realistic initial conditions, which would avoid the problem altogether \citep{wald:1997}. An extremely rapid spin could prevent the collapse into a black hole thanks to the centrifugal forces. The object would have to lose enough of its angular momentum before it could collapse.
 
-Astrophysical black holes that appear in nature are assumed to be most likely Kerr black holes. The normal matter that creates and feeds black holes contains roughly equal amounts of protons and electrons, so the overall electric charge is mostly neutral. But stars do spin around themselves, thus possessing angular momentum. Because of the conservation of angular momentum, the stellar remnant will spin around itself as well. Black holes can also gain more angular momentum via matter falling into them. Gas coming close to a black hole will form into an accretion disk around it. For the matter to be able to reach the black hole and fall into it, it must somehow lose some of its angular momentum. The total angular momentum of the disk must be conserved however, so the momentum has to move outwards in the disk. This happens due to collisions between the gas particles, which causes other particles to move slower and others faster. These slower moving particles then move closer to the black hole in the disk. Eventually the matter will fall within the event horizon, conferring its mass and remaining angular momentum to the black hole, speeding up the rotation of the black hole \citep{bhphysics}. Black holes are also capable of losing their angular momentum. One way for this to happen is through the emission of jets.
+Astrophysical black holes that appear in nature are assumed to be most likely Kerr black holes. The normal matter that creates and feeds black holes contains roughly equal amounts of protons and electrons, so the overall electric charge is mostly neutral. But stars do spin around themselves, thus possessing angular momentum. Because of the conservation of angular momentum, the stellar remnant will spin around itself as well. Black holes can also gain angular momentum through accreting matter falling into them. Gas coming close to a black hole will form an accretion disk around it. For the matter to be able to reach the black hole and fall into it, it must somehow lose some of its angular momentum. The total angular momentum of the disk must be conserved however, so the momentum has to move outwards in the disk.
+The main source for this is believed to be magneto-rotational instability. The matter in an accretion disk can be considered a magnetized, rotating, and perfectly conducting fluid. In this kind of environment magnetic forces can cause torques on the matter, decreasing the angular momentum of matter closer to the black hole and increasing it in the matter farther away. These instabilities will effectively drive angular momentum outwards in the disk.
+Eventually the matter will fall within the event horizon, conferring its mass and remaining angular momentum to the black hole, speeding up the rotation of the black hole \citep{bhphysics}. Black holes are also capable of losing their angular momentum. One way for this to happen is through the emission of jets.
 
 \subsection{The structure of a rotating black hole}
 
-While Schwarzschild black holes have only the one event horizon and a point-like singularity in the middle, spinning black holes are far more complicated. All massive objects cause a space-time effect predicted by general relativity that is known as de Sitter precession or the geodetic effect. The presence of mass warps space-time, causing objects orbiting around the mass to precess slightly. In addition to this, spinning sources of gravity cause an additional effect called Lense-Thirring precession or frame-dragging. The massive object drags the surrounding spacetime with it as it spins, causing nearby particles and photons to rotate too, even if they did not have any angular momentum of their own to begin with. Both of these effects have been experimentally confirmed, for example by the Gravity Probe B mission. It measured the slight changes in the spin of gyroscopes aboard a satellite orbiting Earth, and confirmed that precession does indeed occur from both sources. The geodetic effect near Earth is around 170 times larger, so it can be measured more accurately \citep{everitt:2009}.
+While Schwarzschild black holes have only the one event horizon and a point-like singularity in the middle, spinning black holes are far more complicated. In general relativity gravity is a consequence of the curvature of spacetime, and this curvature causes an effect that is known as de Sitter precession or the geodetic effect. The curvature of spacetime causes the orbits of objects around a mass to precess slightly. This is true for all masses. In addition to this, spinning masses cause an additional effect called Lense-Thirring precession or frame-dragging. The massive object drags the surrounding spacetime with it as it spins, causing nearby particles and photons to rotate around the massive object as well, even if they did not have any angular momentum of their own to begin with. Both of these effects have been experimentally confirmed, for example by the Gravity Probe B mission. It measured the slight changes in the spin of gyroscopes aboard a satellite orbiting Earth, and confirmed that precession does indeed occur from both sources. The geodetic effect near Earth is around 170 times larger, so it can be measured more accurately \citep{everitt:2009}.
 
-Thus the frame-dragging effect is significant only around very massive objects, like black holes that are rotating rapidly. At certain point this effect becomes so strong that any object, including light, \textit{must} spin along the rotation of the black hole. This limit is known as the stationary limit surface, and it is described in equation \ref{equ:statlimsurf}. The area inside this limit is called the ergosphere, so named after the Greek word for work. The ergosphere differs from the insides of an event horizon because particles that fall into it can actually still escape from this region. If a particle escapes from the ergosphere, it converts some of the black hole's rotation energy into it's own momentum \citep{grintro}. This lowers the angular momentum of the black hole, and the process could theoretically over time cause a rotating black hole to spin increasingly slower.
+Thus the frame-dragging effect is significant only around very massive objects, like black holes that are rotating rapidly. At certain point this effect becomes so strong that any object, including light, \textit{must} spin along the rotation of the black hole. This limit is known as the stationary limit surface, and it is described in equation \ref{equ:statlimsurf}. The area inside this limit is called the ergosphere, so named after the Greek word for work. The ergosphere differs from the insides of an event horizon because particles that fall into it can still escape from this region. If a particle escapes from the ergosphere, it converts some of the black hole's rotational energy into its own momentum \citep{grintro}. This lowers the angular momentum of the black hole, and the process could theoretically over time cause a rotating black hole to spin arbitrarily slow.
 
 %This is called the Penrose process, and it is a possible explanation for some highly energetic astrophysical phenomena, such as gamma ray bursts. 
 %TODO tarkenna tätä kappaletta
@@ -529,7 +531,7 @@ The transformation to the new coordinates is given via complex numbers. The new 
 \begin{align}
 \Gamma &= r \left( \frac{\mathbf{p}^2}{2 \mu} - \frac{G \mu M}{r} - E \right) \nonumber \\ 
 &= \mathbf{Q}^2 \left( \frac{\mathbf{p}^2}{2 \mu} - \frac{G \mu M}{\mathbf{Q}^2} - E \right) \nonumber \\
-&= \frac{2^2 \mathbf{Q}^2 \cdot \mathbf{P}^2}{8 \mu} - E \mathbf{Q}^2 - G \mu M \nonumber \\
+&= \frac{2^2 \mathbf{Q}^2 \cdot \mathbf{p}^2}{8 \mu} - E \mathbf{Q}^2 - G \mu M \nonumber \\
 &= \frac{\mathbf{P}^2}{8 \mu} - E \mathbf{Q}^2 - G \mu M \ ,
 \end{align}
 where $\mathbf{P} = 2 \mathbf{Q} \cdot \mathbf{p}$. Similarly to the one-dimensional case, this is the Hamiltonian of a simple harmonic oscillator, except in this case our harmonic oscillator is two-dimensional. The singularity has thus once again been removed.
@@ -567,7 +569,7 @@ Q_3 & Q_4 & Q_1 & Q_2 \\
 Q_4 & -Q_3 & Q_2 & -Q_1
 \end{pmatrix} \ .
 \end{equation}
-The transformation is given by the following relations relations \citep{ad}: 
+The transformation is given by the following relations \citep{ad}: 
 \begin{equation}
 \mathbf{r} = \mathcal{L} \mathbf{Q} \label{equ:KStransform}
 \end{equation}
@@ -585,7 +587,7 @@ and
 %\end{equation}
 %and from squaring this we get
 \begin{equation}
-\mathbf{p}^2 = \frac{\mathbf{P}^2}{4 \mathbf{Q}^2}
+\mathbf{p}^2 = \frac{\mathbf{P}^2}{4 \mathbf{Q}^2} \ .
 \end{equation}
 By again using the time transform function $g = r = \left| \mathbf{r} \right| = \mathbf{Q}^2$ we get
 \begin{align}
