Paulin korjauksia eteenpäin

--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -76,6 +76,45 @@ publisher = {Cambridge University Press},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{gultekin:2009,
+       author = {{G{\"u}ltekin}, K. and {Richstone}, D.~O. and {Gebhardt}, K. and
+         {Lauer}, T.~R. and {Tremaine}, S. and {Aller}, M.~C. and
+         {Bender}, R. and {Dressler}, A. and {Faber}, S.~M. and
+         {Filippenko}, A.~V. and {Green}, R. and {Ho}, L.~C. and
+         {Kormendy}, J. and {Magorrian}, J. and {Pinkney}, J. and
+         {Siopis}, C.},
+        title = "{The M-{\ensuremath{\sigma}} and M-L Relations in Galactic Bulges, and Determinations of Their Intrinsic Scatter}",
+      journal = {ApJ},
+     keywords = {black hole physics, galaxies: general, galaxies: nuclei, galaxies: statistics, stellar dynamics, Astrophysics - Galaxy Astrophysics, Astrophysics - Cosmology and Extragalactic Astrophysics},
+         year = "2009",
+        month = "Jun",
+       volume = {698},
+        pages = {198-221},
+          doi = {10.1088/0004-637X/698/1/198},
+archivePrefix = {arXiv},
+       eprint = {0903.4897},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009ApJ...698..198G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{margalit:2017,
+       author = {{Margalit}, B. and {Metzger}, B.~D.},
+        title = "{Constraining the Maximum Mass of Neutron Stars from Multi-messenger Observations of GW170817}",
+      journal = {ApJ},
+     keywords = {equation of state, gravitational waves, stars: neutron, Astrophysics - High Energy Astrophysical Phenomena},
+         year = "2017",
+        month = "Dec",
+       volume = {850},
+          eid = {L19},
+          doi = {10.3847/2041-8213/aa991c},
+archivePrefix = {arXiv},
+       eprint = {1710.05938},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...850L..19M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{rantala:2018,
        author = {{Rantala}, A. and {Johansson}, P.~H. and {Naab}, T. and {Thomas}, J. and {Frigo}, M.},
         title = "{The Formation of Extremely Diffuse Galaxy Cores by Merging Supermassive Black Holes}",
